# csNotes

./: .gitignore  README.md  output_table.md
Advanced _programming/homework/: hw06.md
Advanced_programming/homework/: hw01.md  hw09.md  hw10.md  hw11.md
Algorithms/: HW01.md  HW02.md  HW03.md  HW04.md  HW05.md  HW06.md  HW07.md  HW08.md  HW09.md  HW10.md  HW11.md  HW12.md  HW13.md
Computer_systems/: cheatSheet.md  pa1.md  pa2-1.md  pa2-2.md  pa2-3.md  pa3-1.md  pa3-2.md  pa3-3.md  pa4-1.md  pa4-2.md  pa4-3.md
Computer_systems/binalab/: p1.asm  p2.asm  p3.asm  p4.asm  p5.asm  p6.asm  p7.asm  p8.asm  phase1  phase1.txt  phase2  phase2.txt  phase3  phase3.txt  phase4  phase4.txt  phase5  phase5.txt  phase6  phase6.txt  phase7  phase7.txt  phase8  phase8.txt  tem.cpp  test
Computer_systems/bufolab/: maketar.sh  phase1  phase1.asm  phase1.txt  phase2  phase2.asm  phase2.s  phase2.txt  phase3  phase3.asm  phase3.s  phase3.txt  phase4  phase4.asm  phase4.s  phase4.txt  phase5  phase5.asm  phase5.txt
Computer_systems/linklab/: linklab  main.asm  outputs.txt  phase1.asm  phase2.asm  phase3.asm  phase3.c  phase4.asm  phase5.asm  (+2 more)
Dev_tools/: AI_programming.md  cmake.md  git.md  markdown.md  qt.md  vscodeCPP.md
Dev_tools/cmake/example_project/: CMakeLists.txt  main.cpp
Dev_tools/cmake/example_project/include/: Example.h
FP/: hw02.md  hw04.md  test.cpp
git/: github.md
markdown/: markdown_notes.md
pytorch/: Loss.ipynb  Pretrainednn.ipynb  Save&Load.ipynb  TensorBoard.ipynb  gpu.ipynb  nnBuild.ipynb  nnStructure.ipynb  nnTrain.ipynb  pytorch_env_config250114.yml
(+234 files in other folders)
